# Socrata-MCP

./: .gitignore  .mcp.json  APP_TOKEN_SETUP.md  README.md  pyproject.toml  test_server.py
examples/: README.md  claude_desktop_config.json  example_queries.py  test_functionality.py
socrata_mcp/: __init__.py  server.py  socrata_client.py
